--- a/frontend/src/Footer.css
+++ b/frontend/src/Footer.css
@@ -6,7 +6,7 @@
 }
 
 .footer-main {
-    background-color: #2d7777;
+    background-color: #364646;
     padding: 20px 0;
     display: flex;
     justify-content: center;
