--- a/frontend/src/Navbar.css
+++ b/frontend/src/Navbar.css
@@ -14,7 +14,7 @@
 /* Header styles */
 .home-header {
     height: 100px;
-    background-color: #2d7777;
+    background-color: #364646;
     color: white;
     display: flex;
     justify-content: space-between;
